[package]
name = "powder_rs"
version = "0.1.0"
edition = "2021"

[rust]
debuginfo-level = 1

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
glium-glyph = "0.14.0"
cgmath = "0.18.0"
rand = "0.8.5"
regex = "1.7.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
#lto = true
