[package]
name = "powder_rs"
version = "0.1.0"
edition = "2021"

[rust]
debuginfo-level = 1

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"]}
regex = "1.10.2"
#syn = "2.0.15"
#quote = "1.0.26"
winit = { version = "0.29.3", features = ["rwh_06"] }
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.18.0"
# web-sys = { version = "0.3.65", features = ["GpuComputePassTimestampWrites"]}
# glyphon = "0.3.0"
glyphon = { git = "https://github.com/grovesNL/glyphon.git" } # Version supporting wgpu 0.18 not on crates.io yet
cfg-if = "1.0.0"
pollster = "0.3.0"
instant = "0.1.12"
bytemuck = { version = "1.14.0", features = ["derive"] }
#serde = "1.0.171"
#directories = "5.0.1"
rust_bresenham = "0.1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.18.0", features = ["webgl"]}
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
    "Storage"
]}

# Local crate for proc macros
[dependencies.proc_macros]
path = "lib/proc_macros"

[profile.dev]
opt-level = 0

[profile.devfast] # cargo run --profile devfast
inherits = "dev"
opt-level = 3
debug = true

[profile.release]
opt-level = 3
#lto = true
